k8s/k8s/ryuko-matoi-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryuko-matoi
  labels:
    app: ryuko-matoi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ryuko-matoi
  template:
    metadata:
      labels:
        app: ryuko-matoi
    spec:
      terminationGracePeriodSeconds: 120
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: ryuko-matoi
      volumes:
        - name: app-data
          hostPath:
            path: /data/ryuko-matoi
            type: DirectoryOrCreate
        - name: app-tmp
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: app-logs
          emptyDir: {}
      containers:
        - name: ryuko-matoi
          image: haikelilham/ryuko-matoi-go:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-data
              mountPath: /app/data
            - name: app-tmp
              mountPath: /app/tmp
            - name: tmp
              mountPath: /tmp
            - name: app-logs
              mountPath: /app/logs
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
