k8s/k8s/ryuko-matoi-go/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryuko-matoi
  labels:
    app: ryuko-matoi
spec:
  type: ClusterIP
  selector:
    app: ryuko-matoi
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
