k8s/k8s/ryuko-matoi-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ryuko-matoi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: ryuko-matoi-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ryuko-matoi
                port:
                  number: 80
